# simplypipe

./: AGENTs.md  LICENSE  README.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
simplypipe/: __init__.py
simplypipe/core/: pipe.py
simplypipe/stats/: model.py
tests/: test_pipe.py
